--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,31 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+#######################
+###### Client #########
+#######################
 
 # dependencies
 client/node_modules/
-client/.pnp
-client/.pnp.js
 client/yarn.lock
-# testing
-/client/coverage
 
 # production
-/client/build
+client/build/
 
-# misc
-client/.DS_Store
-client/.env.local
-client/.env.development.local
-client/.env.test.local
-client/.env.production.local
-
+# log
 client/npm-debug.log*
 client/yarn-debug.log*
 client/yarn-error.log*
+
+#######################
+###### Server #########
+#######################
+
+# dependencies
+server/node_modules/
+server/yarn.lock
+
+# production
+server/build/
+
+# log
+server/npm-debug.log*
+server/yarn-debug.log*
+server/yarn-error.log*
